logs/cron_log.log
rake aborted!
SyntaxError: /Users/toolmaker/git/Boia/app.rb:75: syntax error, unexpected <<, expecting end-of-input
<<<<<<< HEAD
  ^
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/activesupport-5.0.1/lib/active_support/dependencies.rb:263:in `rescue in load_dependency'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/activesupport-5.0.1/lib/active_support/dependencies.rb:256:in `load_dependency'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/activesupport-5.0.1/lib/active_support/dependencies.rb:293:in `require'
/Users/toolmaker/git/Boia/Rakefile:2:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/gems/rake-12.0.0/exe/rake:27:in `<top (required)>'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `eval'
/Users/toolmaker/.rvm/gems/ruby-2.3.0/bin/ruby_executable_hooks:15:in `<main>'
(See full trace by running task with --trace)
